# ManAndCarDetector

./: CMakeCache.txt  CMakeLists.txt  CapReader.cpp  CapReader.h  MainDetector.cpp  MainDetector.h  Makefile  PartDetector.cpp  PartDetector.h  WebPrj  cmake_install.cmake  main.cpp
